# splag

./: .gitignore  CMakeLists.txt  LICENSE  README.md  constraint.tcl  directive.json  draw.py  link_config.ini  run-cpu.sh
data/: graph500-scale-5  graph500-scale-5.weights
docker/: Dockerfile  run.sh
scripts/: amount-of-work.py  build.sh  draw.py  run-cpu.sh  run-gpu.sh  run.sh
src/: recut-sssp.cpp  sssp-cgpq.h  sssp-frt.cpp  sssp-g500.cpp  sssp-host.cpp  sssp-host.h  sssp-kernel.h  sssp-piheap-index.h  sssp-piheap.h  sssp.cpp  sssp.h  util.h
